# bazel-intro

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  go.mod  go.sum  requirements.in  requirements_lock.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
cpp/app/: BUILD.bazel  main.cc
cpp/greeter/: BUILD.bazel  greeter.cc  greeter.h  greeter_test.cc
cpp/server/: BUILD.bazel  main.cc
docs/: bazel-query-examples.md  presentation-README.md  presentation.html
docs/superpowers/plans/: 2026-06-15-bazel-comments-and-clangd.md  2026-06-15-bazel-query-examples.md  2026-06-15-github-actions-ci.md  2026-06-15-grpc-proto.md
docs/superpowers/specs/: 2026-06-15-bazel-comments-and-clangd-design.md  2026-06-15-bazel-query-examples-design.md  2026-06-15-github-actions-ci-design.md  2026-06-15-grpc-proto-design.md
go/app/: BUILD.bazel  main.go
go/client/: BUILD.bazel  main.go
go/greeter/: BUILD.bazel  greeter_test.go
proto/: BUILD.bazel  greeter.proto
python/demo/: BUILD.bazel  main.py
rust/app/: BUILD.bazel
rust/app/src/: main.rs
rust/greeter/: BUILD.bazel
rust/greeter/src/: lib.rs
scripts/: format_cpp.sh  refresh_compile_commands.sh  refresh_rust_project.sh
test/integration/: BUILD.bazel  greeter_test.sh
