# BUILD.bazel — root package for the bazel-intro workspace.
#
# Making the workspace root a Bazel package (by placing BUILD.bazel here)
# enables top-level label references such as //:go.mod used by the Gazelle
# go_deps extension in MODULE.bazel.
#
# This file hosts two IDE-support targets:
#   //:refresh_compile_commands — generates compile_commands.json for clangd (C++)
#   //:gen_rust_project         — alias for rust-analyzer's rust-project.json
#
# Docs: https://bazel.build/concepts/build-files

load(
    "@hedron_compile_commands//:refresh_compile_commands.bzl",
    "refresh_compile_commands",
)

# Regenerates compile_commands.json for all C++ targets.
# Re-run this whenever you add or modify C++ source files.
#
# exclude_external_sources = True skips compilation actions for headers from
# external workspaces (e.g. abseil-cpp), which avoids an upstream hedron issue
# with -xc++-header actions that don't follow the expected argument format.
# clangd still resolves external includes correctly via its own header search.
#
# Usage:
#   bazel run //:refresh_compile_commands
#   ./scripts/refresh_compile_commands.sh
#
# Docs: https://github.com/hedronvision/bazel-compile-commands-extractor
refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
        "//cpp/...": "",
    },
    exclude_external_sources = True,
)

# Alias for rust-analyzer's rust-project.json generator.
# Generates rust-project.json at the workspace root so rust-analyzer can
# resolve crate imports without a Cargo.toml.
#
# Usage:
#   bazel run //:gen_rust_project
#   ./scripts/refresh_rust_project.sh
#
# Docs: https://github.com/bazelbuild/rules_rust/blob/main/tools/rust_analyzer/README.md
alias(
    name = "gen_rust_project",
    actual = "@rules_rust//tools/rust_analyzer:gen_rust_project",
)
