# BUILD.bazel — root package for the bazel-intro workspace.
#
# Making the workspace root a Bazel package (by placing BUILD.bazel here)
# enables top-level label references such as //:go.mod used by the Gazelle
# go_deps extension in MODULE.bazel.
#
# This file hosts tooling targets:
#   //:refresh_compile_commands — generates compile_commands.json for clangd (C++)
#   //:gen_rust_project         — alias for rust-analyzer's rust-project.json
#   //:clang-format             — alias for clang-format 18.1.8 from the LLVM toolchain
#   //:buildifier               — formats all BUILD.bazel / .bzl / MODULE.bazel files
#   //:buildifier.check         — same, but exits 1 if any file would change (CI)
#
# Docs: https://bazel.build/concepts/build-files

load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load(
    "@hedron_compile_commands//:refresh_compile_commands.bzl",
    "refresh_compile_commands",
)

# Regenerates compile_commands.json for all C++ targets.
# Re-run this whenever you add or modify C++ source files.
#
# exclude_external_sources = True skips compilation actions for headers from
# external workspaces (e.g. abseil-cpp), which avoids an upstream hedron issue
# with -xc++-header actions that don't follow the expected argument format.
# clangd still resolves external includes correctly via its own header search.
#
# Usage:
#   bazel run //:refresh_compile_commands
#   ./scripts/refresh_compile_commands.sh
#
# Docs: https://github.com/hedronvision/bazel-compile-commands-extractor
refresh_compile_commands(
    name = "refresh_compile_commands",
    exclude_external_sources = True,
    targets = {
        "//cpp/...": "",
    },
)

# Alias for rust-analyzer's rust-project.json generator.
# Generates rust-project.json at the workspace root so rust-analyzer can
# resolve crate imports without a Cargo.toml.
#
# Usage:
#   bazel run //:gen_rust_project
#   ./scripts/refresh_rust_project.sh
#
# Docs: https://github.com/bazelbuild/rules_rust/blob/main/tools/rust_analyzer/README.md
alias(
    name = "gen_rust_project",
    actual = "@rules_rust//tools/rust_analyzer:gen_rust_project",
)

# Alias for clang-format 18.1.8 from the BCR-downloaded LLVM toolchain.
# Prefer ./scripts/format_cpp.sh, which sets up absolute paths correctly.
#
# Usage:
#   bazel run //:clang-format -- -i <abs-path-to-file>
#   ./scripts/format_cpp.sh
alias(
    name = "clang-format",
    actual = "@llvm_toolchain//:clang-format",
)

# Formats all BUILD.bazel, .bzl, and MODULE.bazel files in-place.
# Uses buildifier_prebuilt from the BCR — no system install needed.
#
# Usage:
#   bazel run //:buildifier          # format in-place
#   bazel run //:buildifier.check    # exit 1 if any file would change (CI)
#
# Docs: https://github.com/keith/buildifier-prebuilt
buildifier(
    name = "buildifier",
    exclude_patterns = ["./.git/*"],
    lint_mode = "warn",
    mode = "fix",
)

buildifier(
    name = "buildifier.check",
    exclude_patterns = ["./.git/*"],
    lint_mode = "warn",
    mode = "diff",
)
