# MODULE.bazel — Bzlmod module definition for this workspace.
#
# Bzlmod is Bazel's modern dependency management system, replacing the legacy
# WORKSPACE file.  Every external dependency is declared here and resolved
# against the Bazel Central Registry (https://registry.bazel.build) unless
# fetched via a module extension.
#
# Docs: https://bazel.build/external/module

module(
    name = "bazel_intro",
    version = "0.0.1",
)

# ── Core utilities ─────────────────────────────────────────────────────────────
# bazel_skylib   — common Starlark helper functions used by many rule sets.
# rules_cc       — cc_library / cc_binary / cc_test rules for C++ targets.
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.0.10")

# ── C++ testing and libraries (BCR) ──────────────────────────────────────────
# googletest  — Google's C++ unit testing framework.
#               Referenced in BUILD files as @googletest//:gtest_main.
#               BCR: https://registry.bazel.build/modules/googletest
# abseil-cpp  — Google's C++ utility library (strings, containers, etc.).
#               //cpp/greeter uses absl::StrCat from this module.
#               BCR: https://registry.bazel.build/modules/abseil-cpp
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "abseil-cpp", version = "20240722.0")

# ── Proto and gRPC (BCR) ──────────────────────────────────────────────────────
# protobuf — proto_library rule, protoc compiler, and cc_proto_library support.
#             Provides the language-neutral proto_library and cc_proto_library
#             rules used in proto/BUILD.bazel.
#             BCR: https://registry.bazel.build/modules/protobuf
# grpc      — C++ gRPC runtime and the cc_grpc_library codegen macro.
#             The Go gRPC runtime comes from go.mod (google.golang.org/grpc),
#             not from this module.
#             BCR: https://registry.bazel.build/modules/grpc
bazel_dep(name = "protobuf", version = "29.3")
bazel_dep(name = "grpc", version = "1.69.0")

# ── Non-BCR C++ dependencies (via module extension) ───────────────────────────
# Libraries absent from the BCR are fetched with http_archive() inside a module
# extension defined in //third_party:extensions.bzl.  Each repo name must be
# listed in use_repo() to be visible to targets in the build graph.
non_registry = use_extension("//third_party:extensions.bzl", "non_registry")
use_repo(non_registry, "hedron_compile_commands", "spdlog")

# ── Go toolchain and rules (BCR) ──────────────────────────────────────────────
# rules_go  — go_library / go_binary / go_test rules and the Go toolchain.
#             BCR: https://registry.bazel.build/modules/rules_go
# gazelle   — generates Bazel BUILD files from Go source and manages go.mod.
#             BCR: https://registry.bazel.build/modules/gazelle
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.1")

# Download the Go SDK.  No separate Go installation is needed — Bazel fetches
# and caches the SDK automatically via bazelisk.
# Docs: https://github.com/bazelbuild/rules_go/blob/main/docs/go/toolchains.md
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.5")

# ── Go module dependencies (via go.mod) ───────────────────────────────────────
# Go packages are NOT distributed through the BCR.  They are declared in
# go.mod using standard Go tooling and fetched from the Go module proxy via
# Gazelle's go_deps module extension.
#
# Workflow for adding a new Go dependency:
#   1. bazel run @rules_go//go -- get <pkg>@<version>
#   2. bazel mod tidy                                    (updates use_repo below)
#   3. bazel run @gazelle//:gazelle -- <pkg-dir>         (regenerates BUILD files)
#
# Docs: https://github.com/bazelbuild/bazel-gazelle/blob/master/docs/go_repository.md
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_fatih_color")
