# MODULE.bazel — Bzlmod module definition for this workspace.
#
# Bzlmod is Bazel's modern dependency management system, replacing the legacy
# WORKSPACE file.  Every external dependency is declared here and resolved
# against the Bazel Central Registry (https://registry.bazel.build) unless
# fetched via a module extension.
#
# Docs: https://bazel.build/external/module

module(
    name = "bazel_intro",
    version = "0.0.1",
)

# ── Core utilities ─────────────────────────────────────────────────────────────
# bazel_skylib   — common Starlark helper functions used by many rule sets.
# rules_cc       — cc_library / cc_binary / cc_test rules for C++ targets.
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.0.10")

# ── C++ testing and libraries (BCR) ──────────────────────────────────────────
# googletest  — Google's C++ unit testing framework.
#               Referenced in BUILD files as @googletest//:gtest_main.
#               BCR: https://registry.bazel.build/modules/googletest
# abseil-cpp  — Google's C++ utility library (strings, containers, etc.).
#               //cpp/greeter uses absl::StrCat from this module.
#               BCR: https://registry.bazel.build/modules/abseil-cpp
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "abseil-cpp", version = "20240722.0")

# ── Proto and gRPC (BCR) ──────────────────────────────────────────────────────
# protobuf — proto_library rule, protoc compiler, and cc_proto_library support.
#             Provides the language-neutral proto_library and cc_proto_library
#             rules used in proto/BUILD.bazel.
#             BCR: https://registry.bazel.build/modules/protobuf
# grpc      — C++ gRPC runtime and the cc_grpc_library codegen macro.
#             The Go gRPC runtime comes from go.mod (google.golang.org/grpc),
#             not from this module.
#             BCR: https://registry.bazel.build/modules/grpc
bazel_dep(name = "protobuf", version = "29.3")
bazel_dep(name = "grpc", version = "1.69.0")

# ── C++ toolchain: LLVM/Clang (BCR) ──────────────────────────────────────────
# toolchains_llvm downloads a specific pre-built LLVM release from GitHub and
# makes it available as a named C++ toolchain.  It is NOT globally registered
# here because the pre-built macOS arm64 binaries in toolchains_llvm 1.7.0 top
# out at LLVM 17 and crash while linking complex projects on Apple Silicon.
#
# Usage:
#   Linux (CI/remote):  bazel build --config=clang //cpp/...
#   macOS (dev):        bazel build //cpp/...   # uses system Xcode Clang
#
# To change the LLVM version, update llvm_version below (run `bazel sync`).
# Available Linux x86_64 versions: run
#   grep x86_64-linux external/toolchains_llvm*/llvm_distributions.bzl
# BCR: https://registry.bazel.build/modules/toolchains_llvm
bazel_dep(name = "toolchains_llvm", version = "1.7.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(llvm_version = "18.1.8")
use_repo(llvm, "llvm_toolchain")

# ── Non-BCR C++ dependencies (via module extension) ───────────────────────────
# Libraries absent from the BCR are fetched with http_archive() inside a module
# extension defined in //third_party:extensions.bzl.  Each repo name must be
# listed in use_repo() to be visible to targets in the build graph.
non_registry = use_extension("//third_party:extensions.bzl", "non_registry")
use_repo(non_registry, "hedron_compile_commands", "spdlog")

# ── Go toolchain and rules (BCR) ──────────────────────────────────────────────
# rules_go  — go_library / go_binary / go_test rules and the Go toolchain.
#             BCR: https://registry.bazel.build/modules/rules_go
# gazelle   — generates Bazel BUILD files from Go source and manages go.mod.
#             BCR: https://registry.bazel.build/modules/gazelle
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.1")

# Download the Go SDK.  No separate Go installation is needed — Bazel fetches
# and caches the SDK automatically via the go_sdk extension in rules_go.
# (bazelisk manages the Bazel version; the Go SDK is separate.)
# Docs: https://github.com/bazelbuild/rules_go/blob/main/docs/go/toolchains.md
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.5")

# ── Go module dependencies (via go.mod) ───────────────────────────────────────
# Go packages are NOT distributed through the BCR.  They are declared in
# go.mod using standard Go tooling and fetched from the Go module proxy via
# Gazelle's go_deps module extension.
#
# Workflow for adding a new Go dependency:
#   1. bazel run @rules_go//go -- get <pkg>@<version>
#   2. bazel mod tidy                                    (updates use_repo below)
#   3. bazel run @gazelle//:gazelle -- <pkg-dir>         (regenerates BUILD files)
#
# Docs: https://github.com/bazelbuild/bazel-gazelle/blob/master/docs/go_repository.md
# ── Python toolchain and rules (BCR) ─────────────────────────────────────────
# rules_python provides py_binary / py_library / py_test rules and downloads a
# hermetic Python interpreter — no system Python is required.  pip.parse() reads
# requirements_lock.txt (SHA-256 hashes included) and fetches every package into
# a content-addressed cache; the result is fully reproducible across machines.
#
# To add a package:
#   1. Add it to requirements.in
#   2. pip-compile requirements.in --generate-hashes -o requirements_lock.txt
#   3. bazel mod tidy  (may update use_repo if new packages introduce new repos)
#
# BCR: https://registry.bazel.build/modules/rules_python
bazel_dep(name = "rules_python", version = "1.0.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")
use_repo(python, "python_3_12", "pythons_hub")

register_toolchains("@pythons_hub//:all")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.12",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pypi")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_fatih_color",
    # google.golang.org/grpc is indirect in go.mod but directly referenced by
    # //go/client BUILD files, so it must appear in use_repo.
    "org_golang_google_grpc",
)

# ── Rust toolchain and rules (BCR) ────────────────────────────────────────────
# rules_rust provides rust_library / rust_binary / rust_test rules and downloads
# a hermetic Rust toolchain (rustc + cargo, no system Rust required).
# crate_universe fetches crates from crates.io — analogous to go_deps for Go.
#
# To add a new crate:
#   1. Add a crate.spec() call below
#   2. bazel mod tidy
#
# BCR: https://registry.bazel.build/modules/rules_rust
RUST_EDITION = "2021"
RUST_VERSION = "1.85.0"

bazel_dep(name = "rules_rust", version = "0.70.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = RUST_EDITION,
    versions = [RUST_VERSION],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

# ── Rust crate dependencies (crates.io) ───────────────────────────────────────
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.spec(package = "colored", version = "2")
crate.from_specs()
use_repo(crate, "crates")
