# BUILD.bazel — Proto targets for the shared GreeterService contract.
#
# Build chain:
#   greeter_proto (proto_library)
#     └─ greeter_cc_proto  (cc_proto_library)  ← C++ message classes
#         └─ greeter_cc_grpc (cc_grpc_library) ← C++ service stubs
#     └─ greeter_go_proto  (go_proto_library)  ← Go message + service stubs
#
# Docs: https://bazel.build/reference/be/protocol-buffer#proto_library
#
# cc_grpc_library docs: https://grpc.io/docs/languages/cpp/bazel/
# go_proto_library docs: https://github.com/bazelbuild/rules_go/blob/main/docs/proto/core.md

load("@grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

# language-neutral proto target; consumed by all language-specific rules below
proto_library(
    name = "greeter_proto",
    srcs = ["greeter.proto"],
    visibility = ["//visibility:public"],
)

# Generates greeter.pb.h / greeter.pb.cc (C++ message classes).
cc_proto_library(
    name = "greeter_cc_proto",
    visibility = ["//visibility:public"],
    deps = [":greeter_proto"],
)

# Generates greeter.grpc.pb.h / greeter.grpc.pb.cc (C++ service stubs).
# grpc_only = True: only generates service stubs; messages come from greeter_cc_proto.
cc_grpc_library(
    name = "greeter_cc_grpc",
    srcs = [":greeter_proto"],
    grpc_only = True,
    visibility = ["//visibility:public"],
    deps = [":greeter_cc_proto"],
)

# Generates Go protobuf + gRPC code in one step.
# compilers = ["@rules_go//proto:go_grpc"] emits both message types and service stubs.
# importpath must match the go_package option in greeter.proto.
go_proto_library(
    name = "greeter_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/mike-boquard/bazel-intro/proto/greeter",
    proto = ":greeter_proto",
    visibility = ["//visibility:public"],
)
