load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "greeter",
    srcs = ["greeter.cc"],
    hdrs = ["greeter.h"],
    deps = ["@abseil-cpp//absl/strings"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "greeter_test",
    srcs = ["greeter_test.cc"],
    deps = [
        ":greeter",
        "@googletest//:gtest_main",
    ],
)
