load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "greeter",
    srcs = ["greeter.go"],
    importpath = "github.com/mike-boquard/bazel-intro/go/greeter",
    visibility = ["//visibility:public"],
)

go_test(
    name = "greeter_test",
    srcs = ["greeter_test.go"],
    deps = [":greeter"],
)
